# kicad-kicandy

./: .gitignore  AGENTS.md  README.md  TODO.md  debug_log.py  devenv.nix  font_management.py  icon_fonts.py  icon_repository.py  justfile  kicad_debug.sh  kicandy_action.py  plugin.json  pyproject.toml  requirements.txt  settings.py  state_store.py
.github/workflows/: format-lint.yml  lint-test.yml  pcm-packaging.yml
PCM/: .gitignore  create_pcm_archive.sh  metadata.template.json
icons/: emoticon-plus.afdesign
tests/: conftest.py  test_icon_fonts.py  test_icon_repository.py
tests/fixtures/: material_design_meta_sample.json  material_symbols_outlined_sample.codepoints  remixicon_sample.css
ui/: __init__.py  icon_picker_dialog.py  manage_icon_sets_dialog.py
