[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "kicad-kicandy"
version = "0.0.0-dev"
description = "KiCad 9 action plugin that inserts Material Symbols into silkscreen"
authors = [{ name = "Steffen Beyer" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
  "kicad-python>=0.2.0",
  "certifi>=2024.2.2",
]

[dependency-groups]
dev = [
  "hunter>=3.9.0",
  "pyinstrument>=5.1.1",
  "pytest>=8.3",
  "ruff>=0.3",
  "wxPython>=4.2.1",
]
ci = [
  "pytest>=8.3",
  "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "W", "B", "I", "UP", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "download: tests that require live icon downloads.",
]
